# tasks

./: .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
tasks/: main.py
tasks/tests/: __init__.py  test_main.py
