[metadata]
name = tasks
author = Hubert Sajnaj
author-email = hubert.sajnaj@gmail.com
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache Software License

[files]
packages =
  tasks

[entry_points]
console_scripts =
  run_tasks = tasks.main:run

